# da2mdev

./: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: components.rs  hooks.rs  main.rs  pages.rs  router.rs
src/components/: commands.rs  great.rs  mode.rs  terminal.rs
src/hooks/: use_commands.rs
src/pages/: home.rs  home_standard.rs  home_terminal.rs
src/utils/: commands.rs
styles/: output.css
